--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/sdk": "^2",
     "ethers": "^5.6.8",
     "next": "^12.1.6",
+    "next-auth": "^4.10.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
