--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3",
+    "@thirdweb-dev/auth": "^3.0.3",
+    "@thirdweb-dev/react": "^3.8.1",
+    "@thirdweb-dev/sdk": "^3.8.1",
     "ethers": "^5.6.8",
     "next": "^13",
     "next-auth": "^4.15.0",
